# sqlalchemy-service

./: .gitignore  LICENSE  README.md  pyproject.toml
service_lib/base_db/: base.py  create.py
service_lib/base_service/: __init__.py  fastapi_mock.py  service.py
sqlalchemy_service/: __init__.py
sqlalchemy_service/base_db/: base.py  create.py  db_configure.py
sqlalchemy_service/base_service/: __init__.py  _fastapi_mock.py  service.py
tests/: conftest.py  service.py  test_fastapi_postgres.py  test_main_postgres.py
